@@ -505,6 +505,45 @@ fi
 
 AM_CONDITIONAL(SQLITE, test x$sqlitedir != x)
 
+dnl Test for MDB Tools (for MS Access files)
+try_mdb=true
+AC_ARG_WITH(mdb,
+[  --with-mdb=<directory>     use MDB tools library in <directory>],[
+if test $withval = no
+then
+	try_mdb=false
+elif test $withval = yes
+then
+	dir="/usr/local"
+else
+	dir=$withval
+fi
+if test $try_mdb = true
+then
+	AC_MSG_CHECKING(for MDB Tools files)
+	sqlitedir=""
+	for d in $dir /usr /gnome/head/INSTALL
+	do
+		if test -f $d/include/mdbtools.h
+		then
+			AC_MSG_RESULT(found MDB Tools in $d)
+			mdbdir=$d
+			break
+		fi
+	done
+	if test x$mdbdir = x
+	then
+		AC_MSG_WARN(MDB backend not used)
+	else
+		MDB_CFLAGS=-I${mdbdir}/include
+		MDB_LIBS="-L${mdbdir}/lib -lmdb"
+		AC_DEFINE(HAVE_MDB)
+	fi
+fi
+])
+
+AM_CONDITIONAL(MDB, test x$mdbdir != x)
+
 dnl ******************************
 dnl Variables
 dnl ******************************
@@ -544,6 +583,7 @@ providers/Makefile
 providers/default/Makefile
 providers/freetds/Makefile
 providers/interbase/Makefile
+providers/mdb/Makefile
 providers/mysql/Makefile
 providers/odbc/Makefile
 providers/oracle/Makefile
