@@ -1,3 +1,10 @@
+2002-05-14  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* providers/mdb/*: started MDB provider (based on MDB Tools).
+
+	* configure.in:
+	* providers/Makefile.am: activated new provider.
+
 2002-05-14  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added Vietnamese (vi) and Azeri (az) to ALL_LINGUAS
